--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,6 @@
 //color
 $color-bg:#141e36; //color background
-$color-bc:#22325b: //color background container
+$color-bc:#22325b; //color background container
 $color-ip:#2c3b64; //color input
 $color-cd:#374a7a; //color card
 $color-hv:#3e6cc5; //color hover
@@ -10,7 +10,7 @@ $color-ds:#b8c8e8; //color descripción
 $color-sp:#6e80a9; //color span
 //text
 $text-tl: 2rem; //text title
-$text-st: 1.5rem; //text subtitle
+$text-st: 1rem; //text subtitle
 $text-ds: 1rem; //text descripción
 $text-sp: .8rem; //text span
 $text-sf: sans-serif;  //style and font family
@@ -28,4 +28,102 @@ body{
   background: $color-bg;
   width: 100%;
   height: 100%;
+}
+.register{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+  .resgister__container{
+    width: 350px;
+    overflow: hidden;
+    background: $color-bc;
+    border-radius: $border-r;
+    
+    
+
+    .register__logo{
+      width: 30px;
+      height: 30px;
+    }
+    h2{
+      font-size: $text-st;
+      font-family: $text-sf;
+      color: $color-tl;
+      text-align: center;
+    }
+    .form__group{
+      width: 80%;
+      margin: auto;
+      display: flex;
+      gap: 5px;
+      flex-direction: column;
+
+      label{
+        font-size: $text-st;
+        font-family: $text-sf;
+        padding: 5px;
+        color: $color-st;
+        display: flex;
+        align-items: center;
+
+        img{
+          margin: 10px;
+          filter: invert(100%);
+        }
+      }
+
+     
+
+    input{
+      width: 100%;
+      font-size: $text-st;
+      height: 40px;
+      padding: 15px;
+      font-family: $text-sf;
+      background: $color-ip;
+      outline: none;
+      border: none;
+      color: $color-ds;
+      border-radius: $border-r;
+
+    }
+      
+    }
+    button{
+      margin:20px  auto;
+      display: block;
+      width: 180px;
+      height: 40px;
+      text-align: center;
+      border: none;
+      outline: none;
+      border-radius: $border-r;
+      background: $color-hv;
+      color: $color-tl;
+    }
+    span{
+      text-align: center;
+      display: block;
+      font-family: $text-sf;
+      font-size: $text-sp;
+      color: $color-tl;
+      margin: 20px 0px 0px 0px;
+    }
+    p{
+      color: $color-st;
+      font-size: $text-ds;
+      padding: 20px;
+      text-align: center;
+      font-family: $text-sf;
+      a{
+        color: $color-st;
+      }
+    }
+  }
+
+
 }
