--- a/src/App.scss
+++ b/src/App.scss
@@ -111,7 +111,8 @@ body{
       font-family: $text-sf;
       font-size: $text-sp;
       color: $color-tl;
-      margin: 20px 0px 0px 0px;
+      margin: 20px;
+      
     }
     p{
       color: $color-st;
