--- a/src/App.scss
+++ b/src/App.scss
@@ -12,7 +12,7 @@ $color-sp:#6e80a9; //color span
 $text-tl: 2rem; //text title
 $text-st: 1rem; //text subtitle
 $text-ds: 1rem; //text descripción
-$text-sp: .8rem; //text span
+$text-sp: .7rem; //text span
 $text-sf: sans-serif;  //style and font family
 //radio
 $border-r: 20px;
@@ -115,8 +115,8 @@ body{
       
     }
     p{
-      color: $color-st;
-      font-size: $text-ds;
+      color: $color-sp;
+      font-size: $text-sp;
       padding: 20px;
       text-align: center;
       font-family: $text-sf;
@@ -124,6 +124,19 @@ body{
         color: $color-st;
       }
     }
+  }
+
+
+}
+
+.home{
+  width: 100%;
+  height: 100vh;
+
+  .home__container{
+    width: 80%;
+    height: 80vh;
+    
   }
 
 
