--- a/src/App.scss
+++ b/src/App.scss
@@ -28,116 +28,113 @@ body{
   background: $color-bg;
   width: 100%;
   height: 100%;
-}
-.register{
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+
+
+  .register{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+    .resgister__container{
+      width: 350px;
+      overflow: hidden;
+      background: $color-bc;
+      border-radius: $border-r;
+      
+      
   
-  .resgister__container{
-    width: 350px;
-    overflow: hidden;
-    background: $color-bc;
-    border-radius: $border-r;
-    
-    
-
-    .register__logo{
-      width: 30px;
-      height: 30px;
-    }
-    h2{
-      font-size: $text-st;
-      font-family: $text-sf;
-      color: $color-tl;
-      text-align: center;
-    }
-    .form__group{
-      width: 80%;
-      margin: auto;
-      display: flex;
-      gap: 5px;
-      flex-direction: column;
-
-      label{
+      .register__logo{
+        width: 30px;
+        height: 30px;
+      }
+      h2{
         font-size: $text-st;
         font-family: $text-sf;
-        padding: 5px;
-        color: $color-st;
+        color: $color-tl;
+        text-align: center;
+      }
+      .form__group{
+        width: 80%;
+        margin: auto;
         display: flex;
-        align-items: center;
-
-        img{
-          margin: 10px;
-          filter: invert(100%);
+        gap: 5px;
+        flex-direction: column;
+  
+        label{
+          font-size: $text-st;
+          font-family: $text-sf;
+          padding: 5px;
+          color: $color-st;
+          display: flex;
+          align-items: center;
+  
+          img{
+            margin: 10px;
+            filter: invert(100%);
+          }
+        }
+  
+       
+  
+      input{
+        width: 100%;
+        font-size: $text-st;
+        height: 40px;
+        padding: 15px;
+        font-family: $text-sf;
+        background: $color-ip;
+        outline: none;
+        border: none;
+        color: $color-ds;
+        border-radius: $border-r;
+  
+      }
+        
+      }
+      button{
+        margin:20px  auto;
+        display: block;
+        width: 180px;
+        height: 40px;
+        text-align: center;
+        border: none;
+        outline: none;
+        border-radius: $border-r;
+        background: $color-hv;
+        color: $color-tl;
+      }
+      span{
+        text-align: center;
+        display: block;
+        font-family: $text-sf;
+        font-size: $text-sp;
+        color: $color-tl;
+        margin: 20px;
+        
+      }
+      p{
+        color: $color-sp;
+        font-size: $text-sp;
+        padding: 20px;
+        text-align: center;
+        font-family: $text-sf;
+        a{
+          color: $color-st;
         }
       }
-
-     
-
-    input{
-      width: 100%;
-      font-size: $text-st;
-      height: 40px;
-      padding: 15px;
-      font-family: $text-sf;
-      background: $color-ip;
-      outline: none;
-      border: none;
-      color: $color-ds;
-      border-radius: $border-r;
-
     }
-      
-    }
-    button{
-      margin:20px  auto;
-      display: block;
-      width: 180px;
-      height: 40px;
-      text-align: center;
-      border: none;
-      outline: none;
-      border-radius: $border-r;
-      background: $color-hv;
-      color: $color-tl;
-    }
-    span{
-      text-align: center;
-      display: block;
-      font-family: $text-sf;
-      font-size: $text-sp;
-      color: $color-tl;
-      margin: 20px;
-      
-    }
-    p{
-      color: $color-sp;
-      font-size: $text-sp;
-      padding: 20px;
-      text-align: center;
-      font-family: $text-sf;
-      a{
-        color: $color-st;
-      }
-    }
-  }
-
-
-}
-
-.home{
-  width: 100%;
-  height: 100vh;
-
-  .home__container{
-    width: 80%;
-    height: 80vh;
+  
+  
     
   }
 
-
+  .home__container{
+    width: 20px;
+    height: 20px;
+    background-color: #141e36;
+    
+  }
 }
