--- a/src/App.scss
+++ b/src/App.scss
@@ -29,6 +29,18 @@ body{
   width: 100%;
   height: 100%;
 
+  h1{
+    font-size: $text-tl;
+    color: $color-tl;
+  }
+  h2{
+    font-size: $text-st;
+    color: $color-st;
+  }
+  h3{
+    font-size: $text-ds;
+    color: $color-ds;
+  }
 
   .register{
     width: 100%;
@@ -131,10 +143,69 @@ body{
     
   }
 
-  .home__container{
-    width: 20px;
-    height: 20px;
-    background-color: #141e36;
+  .home{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    .home__container{
+      width: 60%;
+      height: 90vh;
+      background: $color-bc;
+      overflow: hidden;
+      border-radius: $border-r;
+      position: relative;
+
+      .home__container__left{
+        width: 100%;
+        height: 100%;
+        padding: 10px;
+      }
+
+      .home__container__right{
+        width: 100%;
+        height: 80px;
+        background: $color-cd;
+        position: absolute;
+        left: 0px;
+        bottom: 0px;
+        border-radius: $border-r;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+
+        button{
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          gap: 5px;
+          width: 50px;
+          height: 50px;
+          border-radius: 50%;
+          outline: none;
+          border: none;
+          background: transparent;
+          cursor: pointer;
+
+          &:hover{
+            background: $color-hv;
+          }
+
+
+
+          img{
+            width: 24px;
+            height: 24px;
+            object-fit: cover;
+          }
+        }
+      }
+ 
+    }
     
   }
 }
