--- a/src/App.scss
+++ b/src/App.scss
@@ -32,14 +32,52 @@ body{
   h1{
     font-size: $text-tl;
     color: $color-tl;
+    font-family: $text-sf;
+    font-weight: 400;
+    padding: 0px 10px;
   }
   h2{
     font-size: $text-st;
     color: $color-st;
+    font-family: $text-sf;
   }
   h3{
     font-size: $text-ds;
     color: $color-ds;
+    font-family: $text-sf;
+    font-weight: 300;
+    padding: 10px 10px ;
+  }
+  h4{
+    font-size: $text-ds;
+    color: $color-ds;
+    font-family: $text-sf;
+    font-weight: 300;
+  }
+  p{
+    font-size: $text-st;
+    color: $color-sp;
+    font-family: $text-sf;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    padding: 10px;
+  }
+
+  .home__body__container__cur::-webkit-scrollbar {
+    width: 10px;     
+  }  
+  .home__body__container__cur::-webkit-scrollbar-track {
+    background-color: #f31d1d; 
+    background: transparent;
+  }
+  
+  .home__body__container__cur::-webkit-scrollbar-thumb {
+    background-color: $color-bg; 
+    border-radius: 10px;
+  }
+  
+  .home__body__container__cur::-webkit-scrollbar-thumb:hover {
+    background: transparent;
   }
 
   .register{
@@ -163,6 +201,131 @@ body{
         width: 100%;
         height: 100%;
         padding: 10px;
+        
+
+        .home__conten{
+          width: 100%;
+          height: 100%;
+          display: flex;
+          flex-direction: column;
+          gap: 20px;
+
+          .home__info_nav{
+
+            .home__info__body{
+              display: flex;
+              align-items: center;
+              justify-content: space-between;
+
+              .home__info__body__text{
+
+              }
+              .home__info__body__img{
+                width: 60px;
+                height: 60px;
+                border-radius: 50%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                overflow: hidden;
+                margin: 10px ;
+
+                img{
+                  width: 100%;
+                  height: 100%;
+                  border-radius: 50%;
+                  object-fit: cover;
+                }
+
+              }
+            }
+
+            .home__info__input{
+              width: 100%;
+              height: 35px;
+              overflow: hidden;
+              padding: 0px;
+              border-radius: $border-r;
+              display: flex;
+              align-items: center;
+              background: $color-ip;
+
+              .home__info__input__text{
+                width: 100%;
+                display: flex;
+                position: relative;
+
+                input{
+                  width: 100%;
+                  height: 35px;
+                  border: none;
+                  outline: none;
+                  padding: 20px;
+                  background: transparent;
+                  color: $color-ds;
+                }
+
+                img {
+                  width: 18px;
+                  cursor: pointer;
+                  object-fit: contain;
+                  position: absolute;
+                  right: 30px;
+                  top: 30%;
+                }
+                
+              }
+
+              
+              
+            }
+
+
+          }
+
+          .home__body__container{
+            width: 100%;
+            padding: 10px;
+
+            .home__body__container__cur{
+              width: 100%;
+              height: 200px;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              flex-flow: wrap;
+              gap: 20px;
+              overflow-y: scroll;
+              
+              
+
+              .hom__cur{
+                position: relative;
+                width: 260px;
+                max-width: 260px;
+                height: 150px;
+                overflow: hidden;
+                border-radius: $border-r;
+                padding: 10px;
+                background: $color-cd;
+
+                .home__icon{
+                  position: absolute;
+                  display: flex;
+                  gap: 10px;
+                  right: 20px;
+                  bottom: 15px;
+
+                  img{
+                    cursor: pointer;
+                  }
+
+                }
+              }
+
+            }
+          }
+        }
       }
 
       .home__container__right{
